; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx_osm.c_ahd_platform_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx_osm.c_ahd_platform_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ahd_platform_intr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ahd_softc*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.ahd_softc*
  store %struct.ahd_softc* %5, %struct.ahd_softc** %3, align 8
  %6 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %7 = call i32 @ahd_lock(%struct.ahd_softc* %6)
  %8 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %9 = call i32 @ahd_intr(%struct.ahd_softc* %8)
  %10 = load %struct.ahd_softc*, %struct.ahd_softc** %3, align 8
  %11 = call i32 @ahd_unlock(%struct.ahd_softc* %10)
  ret void
}

declare dso_local i32 @ahd_lock(%struct.ahd_softc*) #1

declare dso_local i32 @ahd_intr(%struct.ahd_softc*) #1

declare dso_local i32 @ahd_unlock(%struct.ahd_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
